fix alignment and styles

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -28,7 +28,6 @@ $base-selector: ".button";
 #{$base-selector}__primary {
   color: #fff;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 6px 0px;
-  margin: 20px 0px 0px;
   width: 100%;
   max-width: 200px;
   font-size: 22px;
