--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -7,5 +7,5 @@
   padding: 2em;
   margin: 0 auto;
   border-radius: 0.5em;
-  gap: 1em;
+  gap: 2em;
 }
